# MCPE_Server_Test_1

./: .gitignore  CMakeLists.txt  MCPE_Server_Test_1.kdev4
src/: main.cpp  udpserver.cpp  udpserver.h
